tests/type-errors/spec_fail_fid_invalid_type.arl
archetype spec_fail_fid_invalid_type

entry exec () {
  specification {
    fails  {
      f1 with InvalidCaller(msg : nat): true;
    }
  }
  effect {
    ()
  }
}
